Fix tablet layout issues

--- a/url-shortening-api-master/style.css
+++ b/url-shortening-api-master/style.css
@@ -106,12 +106,12 @@ a {
 }
 
 .mobile-only {
-  display: none;
+  display: none !important;
 }
 
 @media (max-width: 40em) {
   .mobile-only {
-    display: block;
+    display: block !important;
   }
 }
 
@@ -247,6 +247,10 @@ header {
   .header__nav {
     display: none;
   }
+
+  .header__hamburger {
+    display: grid !important;
+  }
 }
 
 .hero {
@@ -309,9 +313,21 @@ h1 {
 }
 
 @media (max-width: 75em) {
+  .hero {
+    text-align: center;
+  }
+
   .hero__space {
-    display: block;
-    height: 30em;
+    display: block !important;
+    height: 25em;
+  }
+
+  h1 {
+    padding-block-start: 0;
+  }
+
+  .hero * {
+    margin-inline: auto;
   }
 }
 
@@ -324,14 +340,6 @@ h1 {
 
   .hero__space {
     height: 20em;
-  }
-
-  h1 {
-    padding-block-start: 0;
-  }
-
-  .hero .pill-link {
-    margin-inline: auto;
   }
 
   .hero__form {
@@ -399,14 +407,14 @@ h1 {
   transform: translateY(6em);
 }
 
-@media (max-width: 40em) {
+@media (max-width: 55em) {
   .stats__cards {
     display: grid;
   }
 
   .stats__cards::after {
     background-color: var(--color-cyan);
-    height: 80%;
+    height: 70%;
     left: 50%;
     top: 10%;
     transform: translateX(-50%);
@@ -464,11 +472,12 @@ footer a:not(:has(> img)) {
   opacity: 0.7;
 }
 
-@media (max-width: 40em) {
+@media (max-width: 55em) {
   footer > .container {
     display: grid;
     gap: 4em;
     place-items: center;
+    text-align: center;
   }
 
   footer nav {
